// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChartTable renders with defaultProps 1`] = `
<div
  className="ax-chart-table ax-chart-table--responsive"
>
  Lorem Ipsum
</div>
`;

exports[`ChartTable renders with even number of xAxisLabels 1`] = `
<div
  className="ax-chart-table"
>
  Lorem Ipsum
</div>
`;

exports[`ChartTable renders with odd number of xAxisLabels 1`] = `
<div
  className="ax-chart-table ax-chart-table--responsive"
>
  Lorem Ipsum
</div>
`;
